# scamper-cloud

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: collaborator-ssh.md  private-artifact-registry.md  regional-fanout-and-costs.md
scamperctl/: __init__.py  __main__.py  cli.py  cost.py  gcloud.py  models.py  runner.py  store.py  workflow.py
tests/: test_cost.py  test_gcloud.py  test_ssh.py  test_store.py  test_workflow.py
